--- a/drivers/block/sunxi_nand/nandtest/Makefile
+++ b/drivers/block/sunxi_nand/nandtest/Makefile
@@ -1,10 +1,10 @@
-obj-$(CONFIG_SUNXI_NAND_TEST) += sunxi_nand_test.o
-sunxi_nand_test-y := nand_test.o \
-	../nfd/nand_blk.o ../nfd/dma_for_nand.o ../nfd/int_for_nand.o \
-	../src/format/nand_format.o \
-	../src/logic/bad_manage.o ../src/logic/logic_ctl.o ../src/logic/mapping.o \
-	../src/logic/mapping_base.o ../src/logic/merge.o ../src/logic/read_reclaim.o \
-	../src/logic/wear_levelling.o ../src/logic/logic_cache.o \
-	../src/scan/nand_scan.o ../src/scan/nand_id.o \
-	../src/physic/nand_phy.o ../src/physic/nand_simple_r.o ../src/physic/nand_simple_w.o \
-	../nfc/nfc_r.o ../nfc/nfc_w.o
+#obj-$(CONFIG_SUNXI_NAND_TEST) += sunxi_nand_test.o
+#sunxi_nand_test-y := nand_test.o \
+#	../nfd/nand_blk.o ../nfd/dma_for_nand.o ../nfd/int_for_nand.o \
+#	../src/format/nand_format.o \
+#	../src/logic/bad_manage.o ../src/logic/logic_ctl.o ../src/logic/mapping.o \
+#	../src/logic/mapping_base.o ../src/logic/merge.o ../src/logic/read_reclaim.o \
+#	../src/logic/wear_levelling.o ../src/logic/logic_cache.o \
+#	../src/scan/nand_scan.o ../src/scan/nand_id.o \
+#	../src/physic/nand_phy.o ../src/physic/nand_simple_r.o ../src/physic/nand_simple_w.o \
+#	../nfc/nfc_r.o ../nfc/nfc_w.o
