corrections for MTD NAND

--- a/.config
+++ b/.config
@@ -758,6 +758,7 @@ CONFIG_MTD_NAND=m
 # CONFIG_MTD_NAND_NANDSIM is not set
 CONFIG_MTD_NAND_PLATFORM=m
 # CONFIG_MTD_ALAUDA is not set
+CONFIG_MTD_NAND_SUNXI=m
 # CONFIG_MTD_ONENAND is not set
 
 #
