remove OF partition table defaults from Kconfig

--- a/.config
+++ b/.config
@@ -747,7 +747,6 @@ CONFIG_MTD_CFI_I2=y
 CONFIG_MTD_NAND_ECC=m
 # CONFIG_MTD_NAND_ECC_SMC is not set
 CONFIG_MTD_NAND=m
-CONFIG_MTD_OF_NAND_PARTS=m
 # CONFIG_MTD_NAND_ECC_BCH is not set
 # CONFIG_MTD_SM_COMMON is not set
 # CONFIG_MTD_NAND_DENALI is not set
@@ -1182,7 +1181,8 @@ CONFIG_CONSOLE_POLL=y
 # CONFIG_SERIAL_IFX6X60 is not set
 # CONFIG_SERIAL_XILINX_PS_UART is not set
 # CONFIG_TTY_PRINTK is not set
-# CONFIG_HVC_DCC is not set
+CONFIG_HVC_DRIVER=y
+CONFIG_HVC_DCC=y
 # CONFIG_IPMI_HANDLER is not set
 CONFIG_HW_RANDOM=m
 # CONFIG_HW_RANDOM_TIMERIOMEM is not set
@@ -1190,7 +1190,7 @@ CONFIG_HW_RANDOM=m
 CONFIG_RAW_DRIVER=m
 CONFIG_MAX_RAW_DEVS=256
 # CONFIG_TCG_TPM is not set
-# CONFIG_DCC_TTY is not set
+CONFIG_DCC_TTY=m
 # CONFIG_RAMOOPS is not set
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
