--- a/drivers/mtd/nand/Kconfig
+++ b/drivers/mtd/nand/Kconfig
@@ -25,6 +25,7 @@ if MTD_NAND
 config MTD_OF_NAND_PARTS
 	tristate
 	default n
+	depends on OF
 
 config MTD_NAND_BCH
 	tristate
@@ -523,7 +524,7 @@ config MTD_NAND_XWAY
 config MTD_NAND_SUNXI
 	tristate "Support for NAND on Allwinner SoCs"
 	depends on PLAT_SUNXI
-	select MTD_OF_NAND_PARTS
+#	select MTD_OF_NAND_PARTS
 	help
 	  Enables support for NAND Flash chips on Allwinner SoCs.
 
