FIXUP: "ARM:dts:sunxi:ps2 dt nodes for A10/A20 PS2 controller."
2 fixups for: "ARM:dts:sunxi:ps2 dt nodes for A10/A20 PS2 controller."

1) Fixup the sun4i ps/2 nodes interrupt property, sun4i interrupts take
only 1 specifier

2) dt bindings should use the compat string for the earliest version of the
hardware which has the relevant hardware block, unless there are differences,
the A10 and A20 ps2 controllers are identical, so for both sun4i-a10-ps2
should be used as compat string, update the sun7i.dtsi ps2 entries to
use the sun4i-a10-ps2 compat string.

Signed-off-by: Hans de Goede <hdegoede@redhat.com>

--- a/arch/arm/boot/dts/sun4i-a10.dtsi
+++ b/arch/arm/boot/dts/sun4i-a10.dtsi
@@ -811,14 +811,14 @@
 		ps20: ps2@0x01c2a000 {
 			compatible = "allwinner,sun4i-a10-ps2";
 			reg = <0x01c2a000 0x400>;
-			interrupts = <0 62 4>;
+			interrupts = <62>;
 			clocks = <&apb1_gates 6>;
 			status = "disabled";
 		};
 		ps21: ps2@0x01c2a400 {
 			compatible = "allwinner,sun4i-a10-ps2";
 			reg = <0x01c2a400 0x400>;
-			interrupts = <0 63 4>;
+			interrupts = <63>;
 			clocks = <&apb1_gates 7>;
 			status = "disabled";
 		};
