mtd: added sunxi_nand1k driver

--- a/drivers/mtd/nand/Makefile
+++ b/drivers/mtd/nand/Makefile
@@ -55,3 +55,5 @@ obj-$(CONFIG_MTD_NAND_SUNXI)		+= sunxi_nand.o
 # obj-$(CONFIG_MTD_OF_NAND_PARTS)		+= ofnandpart.o
 
 nand-objs := nand_base.o nand_bbt.o nand_timings.o
+
+obj-y += sunxi-nand1k/
