--- a/drivers/mtd/nand/Kconfig
+++ b/drivers/mtd/nand/Kconfig
@@ -528,4 +528,6 @@ config MTD_NAND_SUNXI
 	help
 	  Enables support for NAND Flash chips on Allwinner SoCs.
 
+source "drivers/mtd/nand/sunxi-nand1k/Kconfig"
+
 endif # MTD_NAND
