ARM: sunxi/dt: fix up cubieboard led triggers.
Signed-off-by: Michal Suchanek <hramrach@gmail.com>

--- a/arch/arm/boot/dts/sun4i-a10-cubieboard.dts
+++ b/arch/arm/boot/dts/sun4i-a10-cubieboard.dts
@@ -215,12 +215,13 @@
 		blue {
 			label = "cubieboard:blue:usr";
 			gpios = <&pio 7 21 0>; /* LED1 */
+			linux,default-trigger = "cpu0";
 		};
 
 		green {
 			label = "cubieboard:green:usr";
 			gpios = <&pio 7 20 0>; /* LED2 */
-			linux,default-trigger = "heartbeat";
+			linux,default-trigger = "mmc0";
 		};
 	};
 
