--- a/arch/arm/boot/dts/sun7i-a20-cubieboard2.dts
+++ b/arch/arm/boot/dts/sun7i-a20-cubieboard2.dts
@@ -178,7 +178,7 @@
 		blue {
 			label = "cubieboard2:blue:usr";
 			gpios = <&pio 7 21 0>;
-			linux,default-trigger = "heartbeat";
+			linux,default-trigger = "cpu0";
 		};
 
 		green {
