mtd:nand: +BBT patch, +Hynix sizes from ID patch, sunxi-nand IRQ freeing fix

--- a/drivers/mtd/nand/Kconfig
+++ b/drivers/mtd/nand/Kconfig
@@ -78,7 +78,7 @@ config MTD_NAND_DENALI
         help
           Enable the driver for NAND flash on Intel Moorestown, using the
           Denali NAND controller core.
- 
+
 config MTD_NAND_DENALI_SCRATCH_REG_ADDR
         hex "Denali NAND size scratch register address"
         default "0xFF108018"
@@ -124,7 +124,7 @@ config MTD_NAND_OMAP2
 
 config MTD_NAND_SUNXI
 	tristate "NAND Flash device on Allwinner A10"
-	depends on ARCH_SUN4I
+	depends on ARCH_SUN4I || ARCH_SUN5I
 	help
           Support for NAND flash on Allwinner A10
 
