--- a/.config
+++ b/.config
@@ -319,7 +319,6 @@ CONFIG_ARCH_SUN5I=y
 #
 # Allwinner's sunxi options
 #
-CONFIG_SW_DEBUG_UART=1
 CONFIG_SUNXI_MULTIPLATFORM=y
 CONFIG_SUNXI_SCALING_MIN=60
 CONFIG_PLAT_SUNXI=y
@@ -463,11 +462,11 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=m
 CONFIG_CPU_FREQ_GOV_USERSPACE=m
 CONFIG_CPU_FREQ_GOV_ONDEMAND=m
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=m
+# CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=m
 CONFIG_CPU_FREQ_GOV_FANTASY=m
 # CONFIG_CPU_FREQ_USR_EVNT_NOTIFY is not set
-CONFIG_CPU_FREQ_DVFS=y
+# CONFIG_CPU_FREQ_DVFS is not set
 
 #
 # ARM CPU frequency scaling drivers
@@ -756,6 +755,7 @@ CONFIG_MTD_NAND=y
 # CONFIG_MTD_SM_COMMON is not set
 # CONFIG_MTD_NAND_MUSEUM_IDS is not set
 # CONFIG_MTD_NAND_GPIO is not set
+CONFIG_MTD_NAND_SUNXI=m
 # CONFIG_MTD_NAND_DISKONCHIP is not set
 # CONFIG_MTD_NAND_DOCG4 is not set
 # CONFIG_MTD_NAND_NANDSIM is not set
@@ -2409,19 +2409,14 @@ CONFIG_HAVE_ARCH_KGDB=y
 CONFIG_KGDB=y
 CONFIG_KGDB_SERIAL_CONSOLE=y
 # CONFIG_KGDB_TESTS is not set
-CONFIG_KGDB_KDB=y
-# CONFIG_KDB_KEYBOARD is not set
+# CONFIG_KGDB_KDB is not set
 # CONFIG_TEST_KSTRTOX is not set
 CONFIG_STRICT_DEVMEM=y
 CONFIG_ARM_UNWIND=y
 CONFIG_OLD_MCOUNT=y
 # CONFIG_DEBUG_USER is not set
 # CONFIG_DEBUG_RODATA is not set
-CONFIG_DEBUG_LL=y
-CONFIG_DEBUG_LL_UART_NONE=y
-# CONFIG_DEBUG_ICEDCC is not set
-# CONFIG_DEBUG_SEMIHOSTING is not set
-# CONFIG_EARLY_PRINTK is not set
+# CONFIG_DEBUG_LL is not set
 # CONFIG_OC_ETM is not set
 
 #
