dts: NFC IRQ number

--- a/arch/arm/boot/dts/sun5i-a10s.dtsi
+++ b/arch/arm/boot/dts/sun5i-a10s.dtsi
@@ -320,7 +320,7 @@
 		nfc: nand@01c03000 {
 			compatible = "allwinner,sun4i-a10-nand";
 			reg = <0x01c03000 0x1000>;
-			interrupts = <0 37 1>;
+			interrupts = <37>;
 			clocks = <&ahb_gates 13>, <&nand_clk>;
 			clock-names = "ahb", "mod";
 			#address-cells = <1>;
