--- a/.config
+++ b/.config
@@ -699,12 +699,12 @@ CONFIG_REGMAP_IRQ=y
 # CONFIG_ARM_CCN is not set
 # CONFIG_VEXPRESS_CONFIG is not set
 # CONFIG_CONNECTOR is not set
-CONFIG_MTD=y
+CONFIG_MTD=m
 # CONFIG_MTD_TESTS is not set
 # CONFIG_MTD_REDBOOT_PARTS is not set
-CONFIG_MTD_CMDLINE_PARTS=y
+CONFIG_MTD_CMDLINE_PARTS=m
 # CONFIG_MTD_AFS_PARTS is not set
-CONFIG_MTD_OF_PARTS=y
+CONFIG_MTD_OF_PARTS=m
 # CONFIG_MTD_AR7_PARTS is not set
 
 #
@@ -763,15 +763,15 @@ CONFIG_MTDRAM_ERASE_SIZE=128
 # Disk-On-Chip Device Drivers
 #
 # CONFIG_MTD_DOCG3 is not set
-CONFIG_MTD_NAND_ECC=y
+CONFIG_MTD_NAND_ECC=m
 # CONFIG_MTD_NAND_ECC_SMC is not set
-CONFIG_MTD_NAND=y
+CONFIG_MTD_NAND=m
 # CONFIG_MTD_NAND_ECC_BCH is not set
 # CONFIG_MTD_SM_COMMON is not set
 # CONFIG_MTD_NAND_DENALI is not set
 # CONFIG_MTD_NAND_GPIO is not set
 # CONFIG_MTD_NAND_OMAP_BCH_BUILD is not set
-CONFIG_MTD_NAND_IDS=y
+CONFIG_MTD_NAND_IDS=m
 # CONFIG_MTD_NAND_DISKONCHIP is not set
 # CONFIG_MTD_NAND_DOCG4 is not set
 # CONFIG_MTD_NAND_NANDSIM is not set
@@ -785,7 +785,7 @@ CONFIG_MTD_NAND_SUNXI=m
 # CONFIG_MTD_LPDDR is not set
 # CONFIG_MTD_LPDDR2_NVM is not set
 # CONFIG_MTD_SPI_NOR is not set
-CONFIG_MTD_UBI=y
+CONFIG_MTD_UBI=m
 CONFIG_MTD_UBI_WL_THRESHOLD=256
 CONFIG_MTD_UBI_BEB_LIMIT=40
 # CONFIG_MTD_UBI_FASTMAP is not set
@@ -2174,7 +2174,7 @@ CONFIG_JFFS2_ZLIB=y
 # CONFIG_JFFS2_LZO is not set
 CONFIG_JFFS2_RTIME=y
 # CONFIG_JFFS2_RUBIN is not set
-CONFIG_UBIFS_FS=y
+CONFIG_UBIFS_FS=m
 # CONFIG_UBIFS_FS_ADVANCED_COMPR is not set
 CONFIG_UBIFS_FS_LZO=y
 CONFIG_UBIFS_FS_ZLIB=y
