dts: partition start addresses and sizes

--- a/.config
+++ b/.config
@@ -58,7 +58,6 @@ CONFIG_GENERIC_IRQ_SHOW=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_GENERIC_IRQ_CHIP=y
 CONFIG_IRQ_DOMAIN=y
-CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_HANDLE_DOMAIN_IRQ=y
 # CONFIG_IRQ_DOMAIN_DEBUG is not set
 CONFIG_IRQ_FORCED_THREADING=y
@@ -348,10 +347,10 @@ CONFIG_ARCH_MULTI_V6_V7=y
 CONFIG_ARCH_SUNXI=y
 CONFIG_MACH_SUN4I=y
 CONFIG_MACH_SUN5I=y
-CONFIG_MACH_SUN6I=y
-CONFIG_MACH_SUN7I=y
-CONFIG_MACH_SUN8I=y
-CONFIG_MACH_SUN9I=y
+# CONFIG_MACH_SUN6I is not set
+# CONFIG_MACH_SUN7I is not set
+# CONFIG_MACH_SUN8I is not set
+# CONFIG_MACH_SUN9I is not set
 # CONFIG_ARCH_SIRF is not set
 # CONFIG_ARCH_TEGRA is not set
 # CONFIG_ARCH_U8500 is not set
@@ -699,12 +698,12 @@ CONFIG_REGMAP_IRQ=y
 # CONFIG_ARM_CCN is not set
 # CONFIG_VEXPRESS_CONFIG is not set
 # CONFIG_CONNECTOR is not set
-CONFIG_MTD=m
+CONFIG_MTD=y
 # CONFIG_MTD_TESTS is not set
 # CONFIG_MTD_REDBOOT_PARTS is not set
-CONFIG_MTD_CMDLINE_PARTS=m
+CONFIG_MTD_CMDLINE_PARTS=y
 # CONFIG_MTD_AFS_PARTS is not set
-CONFIG_MTD_OF_PARTS=m
+CONFIG_MTD_OF_PARTS=y
 # CONFIG_MTD_AR7_PARTS is not set
 
 #
@@ -763,20 +762,21 @@ CONFIG_MTDRAM_ERASE_SIZE=128
 # Disk-On-Chip Device Drivers
 #
 # CONFIG_MTD_DOCG3 is not set
-CONFIG_MTD_NAND_ECC=m
+CONFIG_MTD_NAND_ECC=y
 # CONFIG_MTD_NAND_ECC_SMC is not set
-CONFIG_MTD_NAND=m
-# CONFIG_MTD_NAND_ECC_BCH is not set
+CONFIG_MTD_NAND=y
+CONFIG_MTD_NAND_BCH=y
+CONFIG_MTD_NAND_ECC_BCH=y
 # CONFIG_MTD_SM_COMMON is not set
 # CONFIG_MTD_NAND_DENALI is not set
 # CONFIG_MTD_NAND_GPIO is not set
 # CONFIG_MTD_NAND_OMAP_BCH_BUILD is not set
-CONFIG_MTD_NAND_IDS=m
+CONFIG_MTD_NAND_IDS=y
 # CONFIG_MTD_NAND_DISKONCHIP is not set
 # CONFIG_MTD_NAND_DOCG4 is not set
 # CONFIG_MTD_NAND_NANDSIM is not set
 # CONFIG_MTD_NAND_PLATFORM is not set
-CONFIG_MTD_NAND_SUNXI=m
+CONFIG_MTD_NAND_SUNXI=y
 # CONFIG_MTD_ONENAND is not set
 
 #
@@ -785,7 +785,7 @@ CONFIG_MTD_NAND_SUNXI=m
 # CONFIG_MTD_LPDDR is not set
 # CONFIG_MTD_LPDDR2_NVM is not set
 # CONFIG_MTD_SPI_NOR is not set
-CONFIG_MTD_UBI=m
+CONFIG_MTD_UBI=y
 CONFIG_MTD_UBI_WL_THRESHOLD=256
 CONFIG_MTD_UBI_BEB_LIMIT=40
 # CONFIG_MTD_UBI_FASTMAP is not set
@@ -1238,7 +1238,6 @@ CONFIG_I2C_MV64XXX=y
 # CONFIG_I2C_PXA_PCI is not set
 # CONFIG_I2C_RK3X is not set
 # CONFIG_I2C_SIMTEC is not set
-# CONFIG_I2C_SUN6I_P2WI is not set
 # CONFIG_I2C_XILINX is not set
 
 #
@@ -1275,7 +1274,7 @@ CONFIG_SPI_MASTER=y
 # CONFIG_SPI_ROCKCHIP is not set
 # CONFIG_SPI_SC18IS602 is not set
 CONFIG_SPI_SUN4I=y
-CONFIG_SPI_SUN6I=y
+# CONFIG_SPI_SUN6I is not set
 # CONFIG_SPI_XCOMM is not set
 # CONFIG_SPI_XILINX is not set
 # CONFIG_SPI_DESIGNWARE is not set
@@ -1327,12 +1326,12 @@ CONFIG_PINCTRL_SUNXI_COMMON=y
 CONFIG_PINCTRL_SUN4I_A10=y
 CONFIG_PINCTRL_SUN5I_A10S=y
 CONFIG_PINCTRL_SUN5I_A13=y
-CONFIG_PINCTRL_SUN6I_A31=y
-CONFIG_PINCTRL_SUN6I_A31_R=y
-CONFIG_PINCTRL_SUN7I_A20=y
-CONFIG_PINCTRL_SUN8I_A23=y
-CONFIG_PINCTRL_SUN8I_A23_R=y
-CONFIG_PINCTRL_SUN9I_A80=y
+# CONFIG_PINCTRL_SUN6I_A31 is not set
+# CONFIG_PINCTRL_SUN6I_A31_R is not set
+# CONFIG_PINCTRL_SUN7I_A20 is not set
+# CONFIG_PINCTRL_SUN8I_A23 is not set
+# CONFIG_PINCTRL_SUN8I_A23_R is not set
+# CONFIG_PINCTRL_SUN9I_A80 is not set
 CONFIG_ARCH_HAVE_CUSTOM_GPIO_H=y
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
@@ -1988,7 +1987,6 @@ CONFIG_RTC_INTF_DEV=y
 #
 # on-CPU RTC drivers
 #
-CONFIG_RTC_DRV_SUN6I=y
 CONFIG_RTC_DRV_SUNXI=y
 # CONFIG_RTC_DRV_SNVS is not set
 # CONFIG_RTC_DRV_XGENE is not set
@@ -2068,9 +2066,7 @@ CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
 # CONFIG_IIO is not set
 # CONFIG_PWM is not set
 CONFIG_IRQCHIP=y
-CONFIG_ARM_GIC=y
 # CONFIG_IPACK_BUS is not set
-CONFIG_ARCH_HAS_RESET_CONTROLLER=y
 CONFIG_RESET_CONTROLLER=y
 # CONFIG_FMC is not set
 
@@ -2434,10 +2430,8 @@ CONFIG_ARM_UNWIND=y
 CONFIG_OLD_MCOUNT=y
 # CONFIG_DEBUG_USER is not set
 CONFIG_DEBUG_LL=y
-# CONFIG_DEBUG_SUN9I_UART0 is not set
 CONFIG_DEBUG_SUNXI_UART0=y
 # CONFIG_DEBUG_SUNXI_UART1 is not set
-# CONFIG_DEBUG_SUNXI_R_UART is not set
 # CONFIG_DEBUG_ICEDCC is not set
 # CONFIG_DEBUG_SEMIHOSTING is not set
 # CONFIG_DEBUG_LL_UART_8250 is not set
@@ -2626,6 +2620,7 @@ CONFIG_DECOMPRESS_XZ=y
 CONFIG_DECOMPRESS_LZO=y
 CONFIG_DECOMPRESS_LZ4=y
 CONFIG_GENERIC_ALLOCATOR=y
+CONFIG_BCH=y
 CONFIG_ASSOCIATIVE_ARRAY=y
 CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT_MAP=y
