--- a/.config
+++ b/.config
@@ -2385,8 +2385,8 @@ CONFIG_ARM_UNWIND=y
 CONFIG_OLD_MCOUNT=y
 # CONFIG_DEBUG_USER is not set
 CONFIG_DEBUG_LL=y
-CONFIG_DEBUG_SUN9I_UART0=y
-# CONFIG_DEBUG_SUNXI_UART0 is not set
+# CONFIG_DEBUG_SUN9I_UART0 is not set
+CONFIG_DEBUG_SUNXI_UART0=y
 # CONFIG_DEBUG_SUNXI_UART1 is not set
 # CONFIG_DEBUG_SUNXI_R_UART is not set
 # CONFIG_DEBUG_ICEDCC is not set
@@ -2397,14 +2397,14 @@ CONFIG_DEBUG_LL_INCLUDE="debug/8250.S"
 # CONFIG_DEBUG_UART_PL01X is not set
 CONFIG_DEBUG_UART_8250=y
 # CONFIG_DEBUG_UART_BCM63XX is not set
-CONFIG_DEBUG_UART_PHYS=0x07000000
-CONFIG_DEBUG_UART_VIRT=0xf7000000
+CONFIG_DEBUG_UART_PHYS=0x01c28000
+CONFIG_DEBUG_UART_VIRT=0xf1c28000
 CONFIG_DEBUG_UART_8250_SHIFT=2
 # CONFIG_DEBUG_UART_8250_WORD is not set
-CONFIG_DEBUG_UART_8250_FLOW_CONTROL=y
+# CONFIG_DEBUG_UART_8250_FLOW_CONTROL is not set
 CONFIG_DEBUG_UNCOMPRESS=y
 CONFIG_UNCOMPRESS_INCLUDE="debug/uncompress.h"
-# CONFIG_EARLY_PRINTK is not set
+CONFIG_EARLY_PRINTK=y
 # CONFIG_PID_IN_CONTEXTIDR is not set
 # CONFIG_DEBUG_SET_MODULE_RONX is not set
 # CONFIG_CORESIGHT is not set
