--- a/arch/arm/boot/dts/sun5i-a10s-olinuxino-micro.dts
+++ b/arch/arm/boot/dts/sun5i-a10s-olinuxino-micro.dts
@@ -70,7 +70,7 @@
 
 				nand-ecc-mode = "hw";
 				nand-rnd-mode = "hw";
-				nand-on-flash-bbt;
+				// nand-on-flash-bbt;
 
 				boot0@0 {
 					label = "boot0";
