mtd: nand: debugging partition registration

--- a/.config
+++ b/.config
@@ -689,7 +689,7 @@ CONFIG_MTD=m
 # CONFIG_MTD_REDBOOT_PARTS is not set
 # CONFIG_MTD_CMDLINE_PARTS is not set
 # CONFIG_MTD_AFS_PARTS is not set
-# CONFIG_MTD_OF_PARTS is not set
+CONFIG_MTD_OF_PARTS=m
 # CONFIG_MTD_AR7_PARTS is not set
 
 #
