nand: debug nand_read_page_hwecc

--- a/.config
+++ b/.config
@@ -93,7 +93,7 @@ CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_CGROUP_SCHED is not set
 CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
-# CONFIG_CHECKPOINT_RESTORE is not set
+CONFIG_CHECKPOINT_RESTORE=y
 CONFIG_NAMESPACES=y
 CONFIG_UTS_NS=y
 CONFIG_IPC_NS=y
